k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aica-sys
  labels:
    name: aica-sys
    app: aica-sys
